--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,7 @@
   <title>&lt;my-element> Demo</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script type="module" src="../page/login.js"></script>
+  <script type="module" src="/my-element.js"></script>
   <style>
     p {
       border: solid 1px blue;
@@ -17,8 +18,11 @@
 
 <body>
   <login-element>
-    <h1>Login</h1>  
+    <h1>Login</h1>
   </login-element>
+  <my-element>
+    <h1>test</h1>
+  </my-element>
 </body>
 
 
