Added firebase sources

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title>&lt;my-element> Demo</title>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script type="module" src="/page/sign/sign.js"></script>
+  <style>
+    p {
+      border: solid 1px blue;
+      padding: 8px;
+    }
+  </style>
 </head>
+
 <body>
-    <a href="dev/index.html">login</a>
+  <sign-element>
+    <h1>Sign</h1>
+  </sign-element>
 </body>
+
+
 </html>
