--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>&lt;my-element> Demo</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script type="module" src="/page/sign/sign.js"></script>
+  <script type="module" src="/page/login/login.js"></script>
   <style>
     p {
       border: solid 1px blue;
@@ -19,6 +20,9 @@
   <sign-element>
     <h1>Sign</h1>
   </sign-element>
+  <login-element>
+    <h1>Login</h1>
+  </login-element>
 </body>
 
 
