firebase 주문, 제품 작업

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script type="module" src="/page/sign/sign.js"></script>
   <script type="module" src="/page/login/login.js"></script>
+  <script type="module" src="/page/goods/goods.js"></script>
+  <script type="module" src="/page/request/request.js"></script>
   <style>
     p {
       border: solid 1px blue;
@@ -23,6 +25,12 @@
   <login-element>
     <h1>Login</h1>
   </login-element>
+  <goods-element>
+    <h1>Goods</h1>
+  </goods-element>
+  <request-element>
+    <h1>Request</h1>
+  </request-element>
 </body>
 
 
