Update Editor and new State

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,8 @@
   <title>&lt;my-element> Demo</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script type="module" src="../page/login.js"></script>
+  <script type="module" src="../page/editor.js"></script>
+  <sctipt type="module" src="../page/state.js"></sctipt>
   <script type="module" src="/my-element.js"></script>
   <style>
     p {
@@ -20,6 +22,12 @@
   <login-element>
     <h1>Login</h1>
   </login-element>
+
+  <editor-page>
+
+  </editor-page>
+
+
   <my-element>
     <h1>test</h1>
   </my-element>
